--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m
+org.gradle.jvmargs = -Dfile.encoding=UTF-8
 org.gradle.daemon=true
 org.gradle.parallel=true
 
@@ -20,6 +20,7 @@ isSingleModuleDebug=false
 #开启gradle缓存
 org.gradle.caching=true
 android.enableBuildCache=true
+
 
 #开启kotlin的增量和并行编译
 kotlin.incremental=true
