--- a/module_freshman/build.gradle
+++ b/module_freshman/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     implementation project(':lib_common')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt deps.arouter.compiler
 }
 
