--- a/module_freshman/src/main/AndroidManifest.xml
+++ b/module_freshman/src/main/AndroidManifest.xml
@@ -10,16 +10,17 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".CommunicateActivity"></activity>
-
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.DataActivity"/>
+        <activity android:name=".activity.GuideActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
+        <activity android:name=".activity.CommunicateActivity"/>
+        <activity android:name=".activity.MainActivity">
+        </activity>
     </application>
 
 </manifest>
