完成指路重邮的基本框架

--- a/module_freshman/src/main/AndroidManifest.xml
+++ b/module_freshman/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
           package="com.mredrock.cyxbs.freshman">
 
     <application
+            android:name="com.mredrock.cyxbs.common.BaseApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -11,7 +12,10 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-
+        <activity android:name=".activity.ShowWayActivity">
+        </activity>
+        <activity android:name=".activity.NecessaryGoodsActivity">
+        </activity>
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -19,7 +23,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
