--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradle_plugins"
+        classpath "com.android.tools.build:gradle:${gradle_plugins}"
         classpath deps.kotlin.gradle
         classpath "com.alibaba:arouter-register:1.0.2"
         classpath 'com.tencent.bugly:tinker-support:1.1.5'
