--- a/module_freshman/build.gradle
+++ b/module_freshman/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt deps.arouter.compiler
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
 }
 
 
