--- a/module_freshman/src/main/AndroidManifest.xml
+++ b/module_freshman/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-
+        <activity android:name=".activity.ShowPictureActivity">
+        </activity>
         <activity android:name=".activity.ShowWayActivity">
         </activity>
         <activity android:name=".activity.NecessaryGoodsActivity">
