--- a/module_freshman/build.gradle
+++ b/module_freshman/build.gradle
@@ -16,6 +16,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
+    implementation 'androidx.room:room-runtime:2.2.0-alpha01'
+    implementation 'androidx.room:room-ktx:2.2.0-alpha01'
+    implementation 'androidx.room:room-compiler:2.2.0-alpha01'
+    implementation 'androidx.room:room-guava:2.2.0-alpha01'
+    annotationProcessor 'androidx.room:room-compiler:2.2.0-alpha01'
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+
+//    implementation 'org.litepal.android:kotlin:3.0.0'
 }
 
 
