--- a/module_freshman/build.gradle
+++ b/module_freshman/build.gradle
@@ -12,6 +12,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
+    implementation 'com.youth.banner:banner:1.4.10'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
     kapt deps.arouter.compiler
     implementation 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
