--- a/module_freshman/src/main/AndroidManifest.xml
+++ b/module_freshman/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity android:name=".ui.activity.AdmissionProcessActivity">
+        </activity>
         <activity android:name=".ui.activity.EditMemoActivity">
         </activity>
         <activity android:name=".ui.activity.ShowPictureActivity"/>
