--- a/module_freshman/build.gradle
+++ b/module_freshman/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.2.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     annotationProcessor 'androidx.room:room-compiler:2.2.0-alpha01'
     kapt "android.arch.persistence.room:compiler:1.1.1"
 
