--- a/module_freshman/src/main/AndroidManifest.xml
+++ b/module_freshman/src/main/AndroidManifest.xml
@@ -12,37 +12,35 @@
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:networkSecurityConfig="@xml/freshman_net"
-
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true"
-
             tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity android:name=".ui.activity.AdmissionProcessActivity">
         </activity>
         <activity android:name=".ui.activity.MoreFunctionActivity">
         </activity>
-
         <activity android:name=".ui.activity.EditMemoActivity">
         </activity>
         <activity android:name=".ui.activity.ShowPictureActivity"/>
-
         <activity android:name=".ui.activity.ShowWayActivity">
         </activity>
         <activity android:name=".ui.activity.NecessaryGoodsActivity">
         </activity>
         <activity android:name=".ui.activity.MainActivity">
+        </activity>
+        <activity android:name=".ui.activity.DataActivity"/>
+        <activity android:name=".ui.activity.GuideActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.DataActivity"/>
-        <activity android:name=".ui.activity.GuideActivity"/>
-        <activity android:name=".ui.activity.CommunicateActivity"
-                  android:windowSoftInputMode="adjustPan"/>
+        <activity
+                android:name=".ui.activity.CommunicateActivity"
+                android:windowSoftInputMode="adjustPan"/>
     </application>
 
 </manifest>
