提交远程仓库

--- a/module_freshman/src/main/AndroidManifest.xml
+++ b/module_freshman/src/main/AndroidManifest.xml
@@ -40,7 +40,9 @@
         </activity>
         <activity
                 android:name=".ui.activity.CommunicateActivity"
-                android:windowSoftInputMode="adjustPan"/>
+                android:windowSoftInputMode="adjustPan">
+
+        </activity>
     </application>
 
 </manifest>
